refactor(core): refactor extension config properties
This commit contains a core refactoring of how
config properties are defined and exposed for extensions